--- a/config.json.example
+++ b/config.json.example
@@ -38,9 +38,9 @@
         "//": "will get added to the read value",
         "offset_hum": 0,
         "offset_temp": 0,
-        "//": "will be multiplied with the read value AFTER adding the offset"
+        "//": "will be multiplied with the read value AFTER adding the offset",
         "scale_hum": 1,
-        "scale_temp": 1.
+        "scale_temp": 1,
 
         "//": "humidity threshold value after which a message will be send, for the min time has to be passed",
         "thres": 62,
